# project-euler

./: .flake8  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint_test.yml
helpers/: init_puzzle.py  matlib.py
project_euler/: pe_00001.py  pe_00002.py  pe_00003.py  pe_00004.py  pe_00005.py  pe_00007.py  pe_001.py  pe_002.py  pe_003.py  pe_004.py  pe_005.py  pe_006.py  pe_007.py  pe_008.py  pe_009.py  pe_010.py  pe_011.py  pe_012.py  pe_013.py  pe_014.py  pe_015.py  pe_016.py  pe_017.py  pe_018.py  pe_019.py  pe_020.py  pe_021.py  pe_022.py  pe_023.py  pe_024.py  pe_025.py  pe_026.py
tests/: test_matlib.py  test_pe_00001.py  test_pe_00002.py  test_pe_00003.py  test_pe_00004.py  test_pe_00005.py  test_pe_00006.py  test_pe_00007.py  test_pe_001.py  test_pe_002.py  test_pe_003.py  test_pe_004.py  test_pe_005.py  test_pe_006.py  test_pe_007.py  test_pe_008.py  test_pe_009.py  test_pe_010.py
